--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <label for="weightInput">Weight (kg):</label>
         <input type="number" id="weightInput">
 
-        <label for="heightInput">Height (cm):</label>
+        <label for="heightInput">Height (m):</label>
         <input type="number" id="heightInput">
 
         <button type="button" id="calculateBtn">Calculate BMI</button>
